--- a/styles/marquim.css
+++ b/styles/marquim.css
@@ -8,7 +8,7 @@ body {
     font-size: 0.9rem;
     letter-spacing: 0.05rem;
     padding: 0.75rem 1rem;
-
+    border: none;
   }
   
   .btn-google {
