--- a/styles/yago.css
+++ b/styles/yago.css
@@ -1,14 +1,18 @@
 body {
-    background: #f8ce75;
-    
+    background-color:#004977  ;
+    background: linear-gradient(to right, #004977 #004977 );
   }
   
   .btn-login {
-    background-color: hsl(41, 66%, 45%);
+    background-color: #c09028;
     font-size: 0.9rem;
     letter-spacing: 0.05rem;
     padding: 0.75rem 1rem;
     border: none;
+    background-color: #004977;
   }
   
-  
+ .containe{
+    width: 100px;
+    
+ }
