--- a/styles/marquim.css
+++ b/styles/marquim.css
@@ -1,10 +1,9 @@
 body {
     background: #004977;
-    background: linear-gradient(to right, ##004977, #fcd889);
+    background: linear-gradient(to right, #004977, #004977 );
   }
   
   .btn-login {
-    background-color: qcy t13;
     font-size: 0.9rem;
     letter-spacing: 0.05rem;
     padding: 0.75rem 1rem;
