--- a/styles/arthur.css
+++ b/styles/arthur.css
@@ -7,7 +7,7 @@ body {
   font-size: 0.9rem;
   letter-spacing: 0.05rem;
   padding: 0.75rem 1rem;
-  
+
 }
 
 .btn-google {
@@ -21,3 +21,6 @@ body {
   background-color: #3b5998;
 }
 
+.form-control2 {
+  appearance: menulist;
+}
