--- a/components/cabecalho.html
+++ b/components/cabecalho.html
@@ -21,7 +21,7 @@
         <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
               alt="Foto de perfil" width="30px"></a></li>
         <li class="carrinho">
-          <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
+          <a href="meu-carrinho-public.html" rel="noopener noreferrer">
             <i class="bi bi-cart4"></i>
           </a>
         </li>
@@ -52,7 +52,7 @@
         <li class="menu-item"><a href="doar-public.html">Doar</a></li>
         <li class="menu-item login"><a href="login.html">Login</a></li>
         <li class="carrinho">
-          <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
+          <a href="meu-carrinho-public.html" rel="noopener noreferrer">
             <i class="bi bi-cart4"></i>
           </a>
         </li>
